--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,10 +1,10 @@
-version: "3"
+version: "3.7"
 services:
   message-mediator-broker:
     container_name: message-mediator-broker-container
     image: eclipse-mosquitto:2.0.15
     volumes:
-      - ./message-mediator-broker/mosquitto.conf:/mosquitto/config/mosquitto.conf
+      - ./mqtt-broker/mosquitto.conf:/mosquitto/config/mosquitto.conf
     ports:
       - 1883:1883
     networks: 
